80% del diseño realizado

--- a/FormPrincipal/FormsButton/Paciente/FormHijos/CrudPaciente.resx
+++ b/FormPrincipal/FormsButton/Paciente/FormHijos/CrudPaciente.resx
@@ -116,4 +116,64 @@
         G8T8DdLvplPntFcSxBwAD0Phh2WVBokcAm0p5CsoakNzoVBo+gb4PaiyNIAuDgAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="pbCerrar.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAABGdBTUEAALGPC/xhBQAABPNJREFUeF7t
+        nUurHUUUhaMT/5bgNIMQB0o0ieLEH+DIqSYj0Tx8K741AYMIijjIbwjJICEhTgISFVEkqKAOrnt1332t
+        21bd03269qpdVVnwQaqhz6nw3b046Zvuc+h+HGZnZyfFUeEt4Yrwg/CjcFV4T3hciJ1zn/94QvhYuC78
+        tsuN3WNPCg8I+85JCTksXBM25ZbwmBB7jZ7BD+ttYVO+E44Je+fGhLwoLM05Yfo6vXJWWJrzwnD+VMg2
+        MjQfCOFr9ci7wrZ5Tdgn5BEcXZn3hXCDPfGOsDZHQyF3h0Pr06OUHDKQeyrkyLjOlp7qa01N/S8q5NNx
+        mTU9TEquydiLCsHHL4u0LCW7DESF/DEuTdJifWWtqTAq5M9xaZaWJsVkMjQq5M64NE0LUkxlICrki3Fp
+        nprry6ymwqiQE+OSkhonxXwyNCrkIeH34QgnNUl5W2DlLxUCcNWRmRrq602BmadCIeBDHCXG86S8LjDz
+        mTD4mG7kksCMx0l5Q2DmS2F475gQwJbyiRDbRwnYNbUnA6SEALYU/Foztg8m7JraJwMcJAT0NCnFaipk
+        kxDQg5SiNRUyRwhoub6K11TIXCGgxUlxUVMhS4SAlqS4qamQpUJAC/XlqqZCthECap4UdzUVsq0QUKMU
+        lzUVskYIqKm+3NZUyFoh4ILAzDaT4rqmQnIIAZ6luK+pkFxCwEWBmTn1xa6pr4TYPmaTUwjwNCnsmvpa
+        iO1jEbmFAA9S2DWVRQawEAJK1hfutWAmmwxgJQSwJ+W08Pz4R1qyygCWQgBbCjPZZQBrIYBdX4yYyAAM
+        IaClSTGTAVhCQAtSTGUAphBQc32ZywBsIaDGSaHIACWEgJqk0GSAUkJADfVFlQFKCgGeJ4UuA5QWAjxK
+        KSIDeBACPNVXMRnAixDgYVKKygCehADcI1EqxWUAb0LAKYGd4Uk8HvAohH0JHXlJiO2FjjcheBBaqeB5
+        L7E9UfEkhP2bvljwwSK2NxpehLwqeAk+gsf2SMGDkJI1lUqxSSktxENNpVJESkkhnmoqFXp9lRLisaZS
+        oU5KCSGeayoVmhS2kBpqKhVKfTGF1FRTqZhPCktIjTWViqkUhpCaayoVs/qyFtJCTaViMimWQtg1hftB
+        cNWWmexSrISwa+obQd8btyYwk7W+LISwa+pbYboH3MTDTLZJyS2EXVMxGUqVUnIKOSMwc5AMpbr6yiXk
+        ZYGZOTKUqiYlh5BXBGaWyFCqkbJWSA0yFHZ9fS7E9nEga4R4rqkU7EnBs2Bi+0iyrZCaJmOKaynbCKlZ
+        hsKur9lSlgqpsaZSuJyUJUJamIwp7qTMFdKiDMVVfc0R0lJNpXAzKZuEtDwZU1xIOUhITzKU4vWVEtJD
+        TaUoOikxIT1OxpSPBGb2pEyFvCAw41GGgq9jYgaTuU/IwzhKjGcZCr6OiZmnQyHfD4c4uSyEf3HPMCfl
+        bxVyeFxTUpMMhSZFhbDesEYZCqW+VMj1cWmammUo5j+4KuSXcWmWFmQoplJUyK/j0iQtyVDM6kuF3ByX
+        2dOiDMVkUlSIxeWClmUo2aWokEfHZbb0IEPJWl8q5EHh5+HI+vQkQ8k1Kf+oEJDjH4c9ylBySHkmFALW
+        /GfpnmUoa+or+X3qeHbU0qz6mp/G2ObeGFzuH86PCQEnhTkXG+8Jzwmx1+iZ48IdYVN+Ep4Vds/bOfQv
+        2OXXV7qnQzAAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="pbMaximizar.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAABGdBTUEAALGPC/xhBQAABGRJREFUeF7t
+        3c2LVWUcB3DRnTEmiaXhGyJGtEjEN1yo4RvGgNjbLMqoP0J0IejChUSirgTLTRsxKEUoME0ccREFbWpR
+        G51eIDKlTCYRqev3dx6e4cyve2fOc8895/kuvl/4LM7ljveZ53u9c+895zxnhkKYTqdTNgT74Rr8Dn83
+        5Ge4CO+CH0Nub8Kn8BN0G/sg3IYbcBCeguKxfSE74TdoO1/BYiiPJYf5YE/EtnMX9sCkQrZAztyBiWdK
+        BrPhF8iZ4VjIEzBe3JQ3o+Anqi328pk7/8VCDoRtimwAP1lNewEoEgv5JmxS5BT4CWvaUaBILORe2KTI
+        l+AnrGkML1dFYiH/hE2KXAc/YU37HCgSC7H3xSw5B37CmvYhUISxEPtQ5iesacNAEbZC/oSZ4CesDb9C
+        9rAVshX8RLVlPWQPUyHvgJ+ktr0OWZO7kIdwHlaBn5xcngd7Y/EAWk/dQt6DV/r0EiwEPyEsnobN0G3s
+        VRyG5NQtZB34X0SCFZCcuoXYM8EPRAJ7g5IcFdIcFUJGhZBRIWRUCBkVQkaFkFEhZFQIGRVCplYh98Nm
+        cl4FPxAJtkFyYiH9HuRg+w/8QCTYAcmJhfwRNpNjxwL7gUiwEZITC7kSNpNj+wz8QCSYA8mJhdiRHqn5
+        AvwgZDLb85iUWIj5vrilelZC+cHl/xZBSsbKhdjuVDuJpErehvIDS2923keV2EeP5eVCzAKY6rDKW2AH
+        lZV/RqZnn0l+hF6x45mXQdFHt39gExyDz+ASnIG3YBZ0u79UMwIfgM2pPfFPgJU1cZ9ehUgmKoSMCiGj
+        QsioEDIqhIwKIaNCyKgQMiqEjAoho0LIqBAyKoSMCiGjQsioEDIqhIwKIaNCyKgQMiqEjAoho0LIqBAy
+        KoSMCiGjQsj0KmQ12IpodsLJJ3ASdkO3+0p1L8NxsDn9GI7ApEXgfCFPwlRn/dhJPXZZi/LPyPTsAgPf
+        Qq9cgOL0wHIhdu2OMagSnZ9enZ0YWyV2NaNny4WkXiGhOMFEpvQMpOSHWMhrYTspdkUBPwCZ7CNISizE
+        zujpJ/PAD0ICu2rRv5CUWEjVkz19toMfiAT2hzw5sRAtrTF4tZbW0OIzg1dr8RktzzR4Wi+LjAoho0LI
+        qBAyKoSMCiGjQsioEDIqhIwKIZOlELsYox+IBLYmZXLqFmIHQtgzoR9rwfbh+1+ExRCsgW5jr2IfJKdu
+        IXXzF9heNaYVTpeCXT36LrSe3IXE2J41243sJ6dtdphOlit8xrAUEmPLc/tJasuLkD1shdiuZD9RbbkJ
+        2cNWiOUN8JPVtKrHTjUexkLOgp+wpp0GisRC+j3IoYmMgp+wptmC0RSJhTD9D7kKfsKaZgf9USQWMtWB
+        wG3HXj78hDXtfaBILORQ2KSIrTvvJ6xpq4AisRD7CuNRcUvefA1+stpyGbInFmJ2FbfkyzjYNUzKk9Sm
+        uXAHcmakXIixr9PvQdv5Dp6D8lhyWAKpp2UMIvZ1zd5OpzPjMYcG30ieIzwjAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pbMinimizar.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGQAAAAQCAYAAADgUdqDAAAABGdBTUEAALGPC/xhBQAAANJJREFUWEft
+        2LEOAUEUheF9BBVREaXX0ClVJB7RJnqJSjSioNQRITQrhOjGuTuujK03e6c4f/IVM+Wchk1YhDnninow
+        gSO84AF3KoW8pbzpGabQh9/bFwepwQJYta2hAX+D1OEEzKYbtMNB5nLLTFvpIEN/ZtbpIKk/Mut0kL0/
+        Mut0EPk5xiJIBzn4I7NOB5E/KCyCdJCxPzLrdBCxzG+YZdtwkBZkcstMekM3HEQ0YQOs2nbQgXyPcBA1
+        gBlc4An82lseeUt50yvI56oRfN/dJR9Xoe4YkhzYbQAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
