--- a/FormPrincipal/FormsButton/Servicio/FormHijos/CrudServicio.resx
+++ b/FormPrincipal/FormsButton/Servicio/FormHijos/CrudServicio.resx
@@ -129,7 +129,7 @@
         X3GlKIqhP5PBJygUc3h0AAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnLimpiar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADIAAAAsCAYAAAAn4+taAAAABGdBTUEAALGPC/xhBQAAAolJREFUaEPd
         2c2rDXEcx3HE/2BhaSGK5Hrc22HBgpWyvEkIyUMoT0UWiHSR8pBsLS1sLBRlSclGyYaiEPIw3t/hdzoz
